# gemm-benchmark

./: .gitignore  Cargo.toml  README.md
src/: README.md  main.rs  stats.rs
