[package]
name = "gemm-benchmark"
version = "0.1.0"
edition = "2018"
description = "Simple BLAS [sd]gemm benchmark"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/danieldk/gemm-benchmark"

[dependencies]
accelerate-src = { version = "0.3", optional = true }
clap = "3.0.0-beta.2"
intel-mkl-src = { version = "0.6", optional = true, default-features = false }
ndarray = { version = "0.15", features = ["blas"] }
openblas-src = { version = "0.10", optional = true, default-features = false, features = [ "cblas", "static" ] }
rayon = "1"

[features]
accelerate = ["accelerate-src"]
intel-mkl = ["intel-mkl-src/mkl-static-lp64-seq"]
intel-mkl-amd = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
openblas = ["openblas-src"]
