[package]
name = "gemm-benchmark"
version = "0.1.1"
edition = "2018"
description = "Simple BLAS [sd]gemm benchmark"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/danieldk/gemm-benchmark"

[dependencies]
anyhow = "1"
accelerate-src = { version = "0.3", optional = true }
blis-src = { version = "0.2", optional = true, default-features = false, features = ["serial", "cblas", "static"] }
intel-mkl-src = { version = "0.6", optional = true, default-features = false }
itertools = "0.10"
ndarray = { version = "0.15", features = ["blas"] }
openblas-src = { version = "0.10", optional = true, default-features = false, features = [ "cblas", "static" ] }
rayon = "1"
statrs = { version = "0.15" }
structopt = { version = "0.3.17", features = ["color", "wrap_help"] }

[features]
accelerate = ["accelerate-src"]
blis = ["blis-src"]
intel-mkl = ["intel-mkl-src/mkl-static-lp64-seq"]
intel-mkl-amd = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
openblas = ["openblas-src"]
